# all-in-one

./: .gitmodules  pyproject.toml  requirements.txt
src/allin1/: analyze.py
